--- a/index.html
+++ b/index.html
@@ -20,8 +20,15 @@
 <section>
     <h2>Про ліцей</h2>
     <p>Ласкаво просимо до нашого навчального закладу! Ми прагнемо до високої якості освіти та розвитку наших учнів.</p>
+    <p>Городківський ліцей – школа успіху та можливостей!</p>
+    <p>Якщо ви шукаєте заклад, що формує лідерів, розвиває таланти та надихає на досягнення, то Городківський ліцей – ваш ідеальний вибір! Ми пропонуємо якісну освіту, сучасні методи навчання та підтримку кожного учня на шляху до мрії.</p>
+    <p> Високий рівень навчання – наші викладачі є справжніми професіоналами, які допоможуть розкрити ваш потенціал.</p>
+    <p>Індивідуальний підхід – кожен учень отримує увагу та підтримку для досягнення власних цілей.</p>
+    <p>Інноваційні методи – інтерактивне навчання, проєктна діяльність, сучасні лабораторії.</p>
+    <p>Активне студентське життя – конкурси, олімпіади, спортивні заходи, творчі гуртки.</p>
+    <p>Наш ліцей – це більше, ніж просто школа. Це місце, де формуються мрії, розвиваються здібності та твориться успішне майбутнє. Оберіть Городківський ліцей – оберіть свій шлях до великих досягнень!</p>    
 </section>
-
+    
 <section>
     <h2>Новини</h2>
     <ul>
