--- a/index.html
+++ b/index.html
@@ -5,9 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Городківський ліцей</title>
     <style>
-        body { font-family: Arial, sans-serif; background-color: #f4f4f4; text-align: center; }
-        header { background-color: #007bff; color: white; padding: 10px; }
-        section { margin: 20px; padding: 20px; background-color: white; border-radius: 5px; }
+        body { font-family: Arial, sans-serif; background-color: #f4f4f4; text-align: center; margin: 0; padding: 0; }
+        header { background-color: #007bff; color: white; padding: 20px; }
+        section { margin: 20px auto; padding: 20px; background-color: white; border-radius: 5px; width: 80%; text-align: left; }
+        h1, h2 { color: #007bff; }
+        p { font-size: 18px; line-height: 1.6; }
+        ul { list-style-type: none; padding: 0; }
+        li { font-size: 18px; margin: 10px 0; }
     </style>
 </head>
 <body>
@@ -19,22 +23,21 @@
 
 <section>
     <h2>Про ліцей</h2>
-    <p>Ласкаво просимо до нашого навчального закладу! Ми прагнемо до високої якості освіти та розвитку наших учнів.</p>
-    <p>Городківський ліцей – школа успіху та можливостей!</p>
+    <p><strong>Городківський ліцей – школа успіху та можливостей!</strong></p>
     <p>Якщо ви шукаєте заклад, що формує лідерів, розвиває таланти та надихає на досягнення, то Городківський ліцей – ваш ідеальний вибір! Ми пропонуємо якісну освіту, сучасні методи навчання та підтримку кожного учня на шляху до мрії.</p>
-    <p> Високий рівень навчання – наші викладачі є справжніми професіоналами, які допоможуть розкрити ваш потенціал.</p>
-    <p>Індивідуальний підхід – кожен учень отримує увагу та підтримку для досягнення власних цілей.</p>
-    <p>Інноваційні методи – інтерактивне навчання, проєктна діяльність, сучасні лабораторії.</p>
-    <p>Активне студентське життя – конкурси, олімпіади, спортивні заходи, творчі гуртки.</p>
-    <p>Наш ліцей – це більше, ніж просто школа. Це місце, де формуються мрії, розвиваються здібності та твориться успішне майбутнє. Оберіть Городківський ліцей – оберіть свій шлях до великих досягнень!</p>    
+    <p><strong>Високий рівень навчання:</strong> наші викладачі є справжніми професіоналами, які допоможуть розкрити ваш потенціал.</p>
+    <p><strong>Індивідуальний підхід:</strong> кожен учень отримує увагу та підтримку для досягнення власних цілей.</p>
+    <p><strong>Інноваційні методи:</strong> інтерактивне навчання, проєктна діяльність, сучасні лабораторії.</p>
+    <p><strong>Активне студентське життя:</strong> конкурси, олімпіади, спортивні заходи, творчі гуртки.</p>
+    <p>Наш ліцей – це більше, ніж просто школа. Це місце, де формуються мрії, розвиваються здібності та твориться успішне майбутнє. Оберіть Городківський ліцей – оберіть свій шлях до великих досягнень!</p>
 </section>
-    
+
 <section>
     <h2>Новини</h2>
     <ul>
-        <li>Завтра спортивні змагання серед учнів!</li>
-        <li>Прийом документів для вступу триває до 1 червня.</li>
-        <li>Оновлення матеріальної бази ліцею - нові книги та обладнання!</li>
+        <li>📢 Завтра спортивні змагання серед учнів!</li>
+        <li>📝 Прийом документів для вступу триває до 1 червня.</li>
+        <li>📚 Оновлення матеріальної бази ліцею - нові книги та обладнання!</li>
     </ul>
 </section>
 
