--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <p><strong>Інноваційні методи:</strong> інтерактивне навчання, проєктна діяльність, сучасні лабораторії.</p>
     <p><strong>Активне студентське життя:</strong> конкурси, олімпіади, спортивні заходи, творчі гуртки.</p>
     <p>Наш ліцей – це більше, ніж просто школа. Це місце, де формуються мрії, розвиваються здібності та твориться успішне майбутнє. Оберіть Городківський ліцей – оберіть свій шлях до великих досягнень!</p>
+    <p>Наша Адреса: Україна, Житомирська область, Бердичівський район, с. Городківка, вул. Шкільна, 28 </p>
 </section>
 
 <section>
