--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <style>
         body { font-family: Arial, sans-serif; background-color: #f4f4f4; text-align: center; margin: 0; padding: 0; }
         header { background-color: #007bff; color: white; padding: 20px; }
+        nav { background-color: #0056b3; padding: 10px; }
+        nav a { color: white; text-decoration: none; margin: 10px; font-size: 18px; }
         section { margin: 20px auto; padding: 20px; background-color: white; border-radius: 5px; width: 80%; text-align: left; }
         h1, h2 { color: #007bff; }
         p { font-size: 18px; line-height: 1.6; }
@@ -20,6 +22,11 @@
     <h1>Городківський ліцей</h1>
     <p>Андрушівський район, Житомирська область</p>
 </header>
+
+<nav>
+    <a href="index.html">Головна</a>
+    <a href="teacher.html">Наші вчителі</a>
+</nav>
 
 <section>
     <h2>Про ліцей</h2>
@@ -36,6 +43,7 @@
 <section>
     <h2>Новини</h2>
     <ul>
+        <li>📢 Завтра спортивні змагання серед учнів!</li>
         <li>📝 Прийом документів для вступу триває до 1 червня.</li>
         <li>📚 Оновлення матеріальної бази ліцею - нові книги та обладнання!</li>
     </ul>
