--- a/teacher.html
+++ b/teacher.html
@@ -7,6 +7,8 @@
     <style>
         body { font-family: Arial, sans-serif; background-color: #f4f4f4; text-align: center; margin: 0; padding: 0; }
         header { background-color: #007bff; color: white; padding: 20px; }
+        nav { background-color: #0056b3; padding: 10px; }
+        nav a { color: white; text-decoration: none; margin: 10px; font-size: 18px; }
         section { margin: 20px auto; padding: 20px; background-color: white; border-radius: 5px; width: 80%; text-align: left; }
         h1, h2 { color: #007bff; }
         p { font-size: 18px; line-height: 1.6; }
@@ -21,15 +23,20 @@
     <p>Андрушівський район, Житомирська область</p>
 </header>
 
+<nav>
+    <a href="index.html">Головна</a>
+    <a href="teacher.html">Наші вчителі</a>
+</nav>
+
 <section>
     <h2>Вчительський склад</h2>
     <ul>
         <li><strong>Директор:</strong> Лінчук Валентина Станіславівна</li>
-        <li><strong>Заступник директора:</strong> Голишівська Тетяна Миколаївна(Бінокль)</li>
+        <li><strong>Заступник директора:</strong> Голишівська Тетяна Миколаївна (Бінокль)</li>
         <li><strong>Вчитель математики:</strong> Коцюк Лариса Петрівна</li>
-        <li><strong>Вчитель української мови та літератури:</strong> Радкевич Тетьяна Анатоліївна(Добра людина)</li>
+        <li><strong>Вчитель української мови та літератури:</strong> Радкевич Тетяна Анатоліївна (Добра людина)</li>
         <li><strong>Вчитель історії:</strong> Рихлюк Ольга Валеріївна</li>
-        <li><strong>Вчитель фізики:</strong> Андрійчук Богдан Вячеславович(ІМБА ВЧИТЕЛЬ)</li>
+        <li><strong>Вчитель фізики:</strong> Андрійчук Богдан Вячеславович (ІМБА ВЧИТЕЛЬ)</li>
         <li><strong>Вчитель хімії:</strong> Лінчук Валентина Станіславівна </li>
         <li><strong>Вчитель біології:</strong> Колесницька Юлія Францівна</li>
         <li><strong>Вчитель англійської мови:</strong> Лобзенка Ірина Володимирівна</li>
